S4_F02_US3_iphone-fixes: Fixing the inputs et filters issues on iphone and removign the double modal on home page

--- a/frontend/src/styles/components/Filters.scss
+++ b/frontend/src/styles/components/Filters.scss
@@ -8,6 +8,7 @@
   z-index: 10;
 
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 
   display: flex;
   align-items: flex-end;
@@ -35,7 +36,7 @@
     animation: modal-mobile-show-container 0.5s ease-out;
     z-index: 20;
     overflow-y: scroll;
-    margin-bottom: 83px;
+    padding-bottom: 83px;
     max-height: 80vh;
     .mobile-drag {
       display: flex;
